Avoid title truncation, minor aside update

--- a/pages/user-guides/[...chunks]/style.module.css
+++ b/pages/user-guides/[...chunks]/style.module.css
@@ -98,7 +98,7 @@
 
   @media screen and (min-width: 1024px) {
     margin-top: 3rem;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 380px 1fr;
   }
 }
 
@@ -145,21 +145,20 @@
 }
 
 .asideHeadingWrapper {
-  background-color: var(--light-bg-color);
-  padding: 20px;
-  position: sticky;
-  top: 0;
+  background: linear-gradient(180deg, var(--light-bg-color) 0%, var(--light-bg-color) 88%, transparent 100%); 
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  padding: 20px;
+  position: sticky;
+  top: 0;
   z-index: 1;
 }
 
-.asideHeading {
+.asideHeadingIntro {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  gap: 1rem;
 }
 
 .asideChapterLabel,
@@ -174,9 +173,6 @@
 .asideListTitle {
   font-size: 20px;
   margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 
   @media screen and (min-width: 1024px) {
     font-size: 22px;
@@ -213,12 +209,12 @@
     align-items: center;
     display: grid;
     gap: 1rem;
-    grid-template-columns: 60px 1fr;
+    grid-template-columns: 70px 1fr;
     padding: 10px 20px;
     transition: background-color .3s;
     width: 100%;
 
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 768px) {
       grid-template-columns: 80px 1fr;
     }
 
@@ -304,7 +300,7 @@
 
 .otherChaptersWrapper {
   margin-top: 2rem;
-  padding: 0 10px 0 20px;
+  padding: 0 20px;
   display: none;
 
   @media screen and (min-width: 1024px) {
@@ -321,7 +317,7 @@
 .otherChapters {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.25rem;
 }
 
 .otherChaptersItem {
@@ -333,19 +329,18 @@
   overflow: hidden;
 }
 
-.otherChaptersHeading {
+.otherChaptersIntro {
   align-items: center;
   display: flex;
-  gap: 1rem;
   justify-content: space-between;
+}
 
-  h2 {
-    font-size: 1rem;
-    margin: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
+.otherChaptersHeading {
+  font-size: 18px;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .nextVideo {
